Deprecations (D): misc mechanical replacements
- View.setBackgroundDrawable → background property (CardView)
- Class.newInstance() → getDeclaredConstructor().newInstance() (ChanManager, StackItem)
- Service.stopForeground(boolean) → stopForeground(STOP_FOREGROUND_REMOVE)
  (PostingService, DownloadService, AudioPlayerService)
- Locale(lang, country) → Locale.of(...) (LocaleManager)
- DisplayMetrics.scaledDensity → TypedValue.applyDimension(COMPLEX_UNIT_SP, …)
  (ThreadDescriptionView, WatcherView)
- Window.setDecorFitsSystemWindows → WindowCompat.setDecorFitsSystemWindows (ViewUtils)
- ActivityManager.TaskDescription(String,int,int) ctor → TaskDescription.Builder (ThemeEngine)
- TelephonyManager.NETWORK_TYPE_EVDO_*/EHRPD have no replacement constants;
  @Suppress("DEPRECATION") on the 3G-detection helper (NetworkObserver)

Deferred to dedicated refactors: WebViewDialog QuotaUpdater (WebSQL removal) and
UriPasteEditText InputConnectionCompat.createWrapper (OnReceiveContentListener).

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_019iRKWNh6nAVKqsaWQF7rQV